# redical-search

./: .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  pytest.ini  setup.cfg
aioredisearch/: __init__.py  client.py  const.py  exception.py  field.py  model.py
redicalsearch/: __init__.py  client.py  const.py  exception.py  field.py  flag.py  mixin.py  model.py  option.py  schema.py
script/: cibuild  cleanup  lint  test  test-continuous  test-integration-continuous  type-check
tests/: add-document-tests.py  aioredisearch-tests.py  conftest.py  create-index-tests.py  create-tests.py  field-tests.py  get-document-tests.py  info-tests.py  model-tests.py  search-tests.py
tests/integration/: client-tests.py  i-add-document-tests.py  i-create-tests.py  i-get-document-tests.py  i-info-tests.py  i-search-tests.py
