[tool.poetry]
name = "redicalsearch"
version = "0.1.0"
description = ""
authors = ["atatsu <nathan.lundquist@gmail.com>"]
include = ["redicalsearch/py.typed"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.6.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
mypy = "^0.790"
flake8 = "^3.8.3"
pytest-watch = "^4.2.0"
pytest-asyncio = "^0.14.0"
redical = {path = "lib/redical", develop = true}
hiredis = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
